--- a/src/components/SliderWrap/SliderWrap.sass
+++ b/src/components/SliderWrap/SliderWrap.sass
@@ -27,3 +27,7 @@
       margin: 0
       display: block
       object-fit: cover
+      @media (max-width: 769px)
+        height: 312px
+      @media (max-width: 378px)
+        height: 164px
