--- a/src/components/ThirdSection/ThirdSection.sass
+++ b/src/components/ThirdSection/ThirdSection.sass
@@ -12,7 +12,7 @@
   &-col
     overflow: hidden
     display: flex
-    padding: 200px 0
+    padding: 200px 0 100px
     flex-direction: column
     justify-content: flex-start
     align-items: center
@@ -21,7 +21,7 @@
     width: 100%
     will-change: transform
     @media (max-width: 769px)
-      padding: 100px 0
+      padding: 100px 0 200px
 
   & .slide
     @media (max-width: 769px)
